@@ -14,8 +14,7 @@ void audit_examine(struct cmd_args_t *, const char **, char **);
 void audit_kill(struct cmd_args_t *, const char **, char **);
 void audit_memory_find(struct cmd_args_t *, const char **, char **);
 void audit_memory_write(struct cmd_args_t *, const char **, char **);
-void audit_register_float(struct cmd_args_t *, const char **, char **);
-void audit_register_gen(struct cmd_args_t *, const char **, char **);
+void audit_register_view(struct cmd_args_t *, const char **, char **);
 void audit_register_write(struct cmd_args_t *, const char **, char **);
 void audit_stepi(struct cmd_args_t *, const char **, char **);
 void audit_thread_list(struct cmd_args_t *, const char **, char **);
