@@ -3,34 +3,22 @@
 
 #include "argparse.h"
 
-enum cmd_error_t cmdfunc_register_float(struct cmd_args_t *, int, char **, char **);
-enum cmd_error_t cmdfunc_register_gen(struct cmd_args_t *, int, char **, char **);
+enum cmd_error_t cmdfunc_register_view(struct cmd_args_t *, int, char **, char **);
 enum cmd_error_t cmdfunc_register_write(struct cmd_args_t *, int, char **, char **);
 
 static const char *REGISTER_COMMAND_DOCUMENTATION =
     "'register' describes the group of commands which deal with registers.\n";
 
-static const char *REGISTER_FLOAT_COMMAND_DOCUMENTATION =
-    "Show floating point registers.\n"
-    "This command has one mandatory argument and no optional arguments.\n"
-    "\nMandatory arguments:\n"
-    "\treg\n"
-    "\t\tThe floating point register.\n"
-    "\t\tThis command accepts an arbitrary amount of this argument.\n"
-    "\nSyntax:\n"
-    "\tregister float reg\n"
-    "\n";
-
-static const char *REGISTER_GEN_COMMAND_DOCUMENTATION =
-    "Show general purpose registers.\n"
+static const char *REGISTER_VIEW_COMMAND_DOCUMENTATION =
+    "Show one or more debuggee registers.\n"
     "This command has no mandatory arguments and one optional argument.\n"
     "\nOptional arguments:\n"
     "\treg\n"
-    "\t\tThe general purpose register.\n"
+    "\t\tThe general purpose or floating point register.\n"
     "\t\tThis command accepts an arbitrary amount of this argument.\n"
     "\t\tOmit this argument to see every general purpose register.\n"
     "\nSyntax:\n"
-    "\tregister gen reg\n"
+    "\tregister view reg?\n"
     "\n";
 
 static const char *REGISTER_WRITE_COMMAND_DOCUMENTATION =
@@ -53,22 +41,16 @@ static const char *REGISTER_WRITE_COMMAND_DOCUMENTATION =
 /*
  * Regexes
  */
-static const char *REGISTER_FLOAT_COMMAND_REGEX =
-    "\\b(?<reg>[qvdsQVDS]{1}\\d{1,2}|(fpsr|FPSR|fpcr|FPCR)+)\\b";
-
-static const char *REGISTER_GEN_COMMAND_REGEX =
-    "(?<reg>(\\b([xwXW]{1}\\d{1,2}|(fp|FP|lr|LR|sp|SP|pc|PC|cpsr|CPSR)+)\\b))|(?=$)";
+static const char *REGISTER_VIEW_COMMAND_REGEX =
+    "(?<reg>[^\\s]+)";
 
 static const char *REGISTER_WRITE_COMMAND_REGEX =
-    "^(?<reg>[\\w\\d]+)\\s+(?<value>(\\{.*\\})|(-?(0[xX])?[\\d\\.]+))";
+    "^(?<reg>[\\$\\w\\d]+)\\s+(?<value>(\\{.*\\})|(-?(0[xX])?[\\d\\.]+))";
 
 /*
  * Regex groups
  */
-static const char *REGISTER_FLOAT_COMMAND_REGEX_GROUPS[MAX_GROUPS] =
-    { "reg" };
-
-static const char *REGISTER_GEN_COMMAND_REGEX_GROUPS[MAX_GROUPS] =
+static const char *REGISTER_VIEW_COMMAND_REGEX_GROUPS[MAX_GROUPS] =
     { "reg" };
 
 static const char *REGISTER_WRITE_COMMAND_REGEX_GROUPS[MAX_GROUPS] =
