@@ -52,12 +52,9 @@ void stack_free(struct stack_t *stack){
     if(!stack)
         return;
 
-    if(stack->data)
-        free(stack->data);
-
-    stack->data = NULL;
-
+    free(stack->data);
     free(stack);
 
+    stack->data = NULL;
     stack = NULL;
 }
