@@ -1,3 +1,7 @@
+6-22-19
+- morphed register float and register gen commands into register view
+- get rid of NULL checks before calling free
+
 6-21-19
 - thread specific breakpoints and watchpoints finished
 - corrected excessive rl_printf timeout timer
